--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+Cerberus==1.0.1
 click==6.6
 Flask==0.11.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+PyJWT==1.4.2
 redis==2.10.5
 Werkzeug==0.11.11
 psycopg2==2.6.2
