--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ Flask==0.11.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.6.2
+py-bcrypt==0.4
 PyJWT==1.4.2
 redis==2.10.5
+virtualenv==15.0.3
 Werkzeug==0.11.11
-psycopg2==2.6.2
